"Alteração frase da foto"

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p><a href="#hardskills" target="_self">Hard Skills</a></p>
         <p><a href="#softskills" target="_self">Soft Skills</a></p>
         <p><a href="https://www.youtube.com/watch?v=LQ-7iWrVAxU&list=RDLQ-7iWrVAxU&start_radio=1" target="_blank">Mais músicas</a></p>
-        <p>Caso queira ver minha foto maior, clique <a href="#foto-igor" target="_self">aqui</a>.</p>
+        <p>Caso queira rever minha foto, clique <a href="#foto-igor" target="_self">aqui</a>.</p>
     </section>
     
 </body>
