alteração texto de apresentação e cor do body

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Igor Barbosa</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
@@ -12,18 +13,18 @@
         <img id="foto-igor" src="./igorDeOculosPreto.jpg" alt="Igor com camisa cinza em pé" width="100px">
     </header>
     <section>
-        <p>
-            Igor Barbosa de Araújo, tenho 29 anos, moro em Belo Horizonte, MG. 
+        <p id="apresentacao">
+            Igor Barbosa de Araújo, tenho 29 anos, moro em <em>Belo Horizonte, MG</em>. 
         </p>
         <h3 id="hardskills"> Algumas de minhas hard skills:</h3>
-        <ul>
+        <ul class="hard">
             <li>Algorítimos e lógica de programação</li>
             <li>Git e GitHub</li>
             <li><strong>HTML</strong></li>
             <li>CSS</li>
         </ul>
         <h3 id="softskills"> Algumas de minhas soft skills:</h3>
-        <ul>
+        <ul class="soft">
             <li>Determinação</li>
             <li>Instindo de liderança</li>
             <li><em>Resiliência</em></li>
