--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Portifólio Igor Barbosa</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <header>
         <h1>Portifólio</h1>
@@ -31,16 +33,20 @@
             <li>Responsabilidade</li>
         </ul>
         <h3>Hobbies:</h3>
-        <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que gosto. Segue uma playlist que recomendo: <a href="https://www.youtube.com/watch?v=4N1iwQxiHrs&list=PLk_k5502gpfP9gCYR8iU4KpKP7-JUm3LC" target="_blank">Playlist</a></p>
-        
+        <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que gosto.
+            Segue uma playlist que recomendo: <a
+                href="https://www.youtube.com/watch?v=4N1iwQxiHrs&list=PLk_k5502gpfP9gCYR8iU4KpKP7-JUm3LC"
+                target="_blank">Playlist</a></p>
+
     </section>
     <section>
         <h4>LINKS:</h4>
         <p><a href="#hardskills" target="_self">Hard Skills</a></p>
         <p><a href="#softskills" target="_self">Soft Skills</a></p>
-        <p><a href="https://www.youtube.com/watch?v=LQ-7iWrVAxU&list=RDLQ-7iWrVAxU&start_radio=1" target="_blank">Mais músicas</a></p>
+        <p><a href="https://www.youtube.com/watch?v=LQ-7iWrVAxU&list=RDLQ-7iWrVAxU&start_radio=1" target="_blank">Mais
+                músicas</a></p>
         <p>Caso queira rever minha foto, clique <a href="#foto-igor" target="_self">aqui</a>.</p>
     </section>
-    
 </body>
+
 </html>
