--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Portifólio</h1>
-        <img id="foto-igor" src="./igorDeOculosPreto.jpg" alt="Igor com camisa cinza em pé" width="100px">
+        <img id="foto-igor" src="./Captura de ecrã de 2022-09-15 17-37-39.png" alt="Igor com camisa cinza em pé" width="100px">
     </header>
     <section>
         <p id="apresentacao">
