adição class button e sua estilização

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
     </section>
     <section>
         <h4>LINKS:</h4>
-        <p><a href="#hardskills" target="_self">Hard Skills</a></p>
-        <p><a href="#softskills" target="_self">Soft Skills</a></p>
-        <p><a href="https://www.youtube.com/watch?v=LQ-7iWrVAxU&list=RDLQ-7iWrVAxU&start_radio=1" target="_blank">Mais
-                músicas</a></p>
+        <ul>
+        <li><a class="button"href="#hardskills" target="_self">Hard Skills</a></li>
+        <li><a class="button" href="#softskills" target="_self">Soft Skills</a></li>
+        <li><a class="button" href="https://www.youtube.com/watch?v=LQ-7iWrVAxU&list=RDLQ-7iWrVAxU&start_radio=1" target="_blank">Mais músicas</a></li>
+    </ul>
         <p>Caso queira rever minha foto, clique <a href="#foto-igor" target="_self">aqui</a>.</p>
     </section>
 </body>
