alteração de posicionamento e remoção dos links

--- a/index.html
+++ b/index.html
@@ -13,45 +13,44 @@
     <div id="content">
         <h1>Portifólio </h1>
         <div id="left">
-        <img id="foto-igor" src="./Captura de ecrã de 2022-09-15 17-37-39.png" alt="Igor com camisa cinza em pé"
-            width="200px">
+            <img id="foto-igor" src="./Captura de ecrã de 2022-09-15 17-37-39.png" alt="Igor com camisa cinza em pé"
+                width="200px">
         </div>
-    <div id="right">
-        <p>
-            <span>Quem sou eu?</span><br><br>
-            Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em <em>Belo Horizonte</em>, MG. Sou graduado como médico veterinário, mas estou em transição de carreira, estudando desenvolvimento web, na <strong>Trybe</strong>.
-        </p>
+        <div id="right">
+            <p>
+                <span>Quem sou eu?</span><br><br>
+                Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em <em>Belo Horizonte</em>, MG. Sou graduado como
+                médico veterinário, mas estou em transição de carreira, estudando desenvolvimento web, na
+                <strong>Trybe</strong>.
+            </p>
+        </div>
+        <div id="skills">
+            <h3> Algumas de minhas hard skills:</h3>
+            <ul class="hard">
+                <li>Algorítimos e lógica de programação</li>
+                <li>Git e GitHub</li>
+                <li><strong>HTML</strong></li>
+                <li>CSS</li>
+            </ul>
+            <h3 id="softskills"> Algumas de minhas soft skills:</h3>
+            <ul class="soft">
+                <li>Determinação</li>
+                <li>Instindo de liderança</li>
+                <li><em>Resiliência</em></li>
+                <li>Responsabilidade</li>
+            </ul>
+        </div>
+        <div id="hobbies">
+            <h3>Hobbies:</h3>
+            <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que
+                gosto.
+                Segue uma playlist que recomendo: <a
+                    href="https://www.youtube.com/watch?v=4N1iwQxiHrs&list=PLk_k5502gpfP9gCYR8iU4KpKP7-JUm3LC"
+                    target="_blank">Playlist</a></p>
+        </div>
+        <div id="fim">
+        <p>Caso queira vizualizar minha foto maior, clique <a href="#foto-igor" target="_blank">aqui</a>.</p>
     </div>
-    <div id="skills" >
-        <h3> Algumas de minhas hard skills:</h3>
-        <ul class="hard">
-            <li>Algorítimos e lógica de programação</li>
-            <li>Git e GitHub</li>
-            <li><strong>HTML</strong></li>
-            <li>CSS</li>
-        </ul>
-        <h3 id="softskills"> Algumas de minhas soft skills:</h3>
-        <ul class="soft">
-            <li>Determinação</li>
-            <li>Instindo de liderança</li>
-            <li><em>Resiliência</em></li>
-            <li>Responsabilidade</li>
-        </ul>
-    </div>
-        <h3>Hobbies:</h3>
-        <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que gosto.
-            Segue uma playlist que recomendo: <a
-                href="https://www.youtube.com/watch?v=4N1iwQxiHrs&list=PLk_k5502gpfP9gCYR8iU4KpKP7-JUm3LC"
-                target="_blank">Playlist</a></p>
-
-        <h4>LINKS:</h4>
-        <ul>
-            <li><a class="button" href="#hardskills" target="_self">Hard Skills</a></li>
-            <li><a class="button" href="#softskills" target="_self">Soft Skills</a></li>
-            <li><a class="button" href="https://www.youtube.com/watch?v=LQ-7iWrVAxU&list=RDLQ-7iWrVAxU&start_radio=1"
-                    target="_blank">Mais músicas</a></li>
-        </ul>
-        <p>Caso queira rever minha foto, clique <a href="#foto-igor" target="_self">aqui</a>.</p>
     </div>
 </body>
 
