adição de proatividade

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h3 id="softskills"> Algumas de minhas soft skills:</h3>
             <ul class="soft">
                 <li>Determinação</li>
+                <li>Proatividade</li>
                 <li>Instindo de liderança</li>
                 <li><em>Resiliência</em></li>
                 <li>Responsabilidade</li>
