--- a/index.html
+++ b/index.html
@@ -6,24 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Igor Barbosa</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles2.css">
 </head>
 
 <body>
-    <div id="content">
-        <h1>Portifólio </h1>
-        <div id="left">
-            <img id="foto-igor" src="./Captura de ecrã de 2022-09-15 17-37-39.png" alt="Igor com camisa cinza em pé"
-                width="200px">
-        </div>
-        <div id="right">
+    <header id="cabecalho">
+        <h1>Igor Barbosa </h1>
+        <nav>
+            <ul class="conteiner">
+                <li>Início</li>
+                <li>Tecnologias</li>
+                <li>Soft Skills</li>
+                <li>Projetos</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+    </header>
+    <section id="presentation">
+            <img id="foto-igor" src="IMG_20220925_180308-removebg-preview.png" alt="Igor com camisa cinza em pé"
+                width="500px">
             <p>
                 <span>Quem sou eu?</span><br><br>
                 Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em <em>Belo Horizonte</em>, MG. Sou graduado como
                 médico veterinário, mas estou em transição de carreira, estudando desenvolvimento web, na
                 <strong>Trybe</strong>.
             </p>
-        </div>
+    </section>
         <div id="skills">
             <h3> Algumas de minhas hard skills:</h3>
             <ul class="hard">
