finalização estilização header e section presentation

--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
         <h1>Igor Barbosa </h1>
         <nav>
             <ul class="conteiner">
-                <li>Início</li>
-                <li>Tecnologias</li>
-                <li>Soft Skills</li>
-                <li>Projetos</li>
-                <li>Contato</li>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Tecnologias</a></li>
+                <li><a href="#">Soft Skills</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
     <section id="presentation">
-            <img id="foto-igor" src="IMG_20220925_180308-removebg-preview.png" alt="Igor com camisa cinza em pé"
-                width="500px">
+            <img id="foto-igor" src="IMG_20220925_180308-removebg-preview.png" alt="Igor com camisa cinza em pé">
             <p>
-                <span>Quem sou eu?</span><br><br>
-                Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em <em>Belo Horizonte</em>, MG. Sou graduado como
-                médico veterinário, mas estou em transição de carreira, estudando desenvolvimento web, na
-                <strong>Trybe</strong>.
+                <span>Olá! Boas vindas!</span><br><br><br>
+                Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em Belo Horizonte, MG. Sou graduado como
+                médico veterinário desde dezembro de 2021, mas estou em transição de carreira, estudando desenvolvimento web fullstack na
+                <strong>Trybe</strong>.<br><br><br>
+                Como não tive contato com a área de programação durante minha trajetória de vida, não me havia passado pela cabeça adentrar nesse mundo nos últimos anos, até que em março de 2022, decidi buscar um pouco mais sobre a área apartir de um relato de um amigo. Desde então, estou apaixonado por programação.<br><br><br>
+                Meu foco atual é o desenvolvimento web voltado para front-end. Diante disso, criei esse portifólio para mostrar um pouco sobre mim e os projetos que já desenvolvi. 
             </p>
     </section>
-        <div id="skills">
+    <section id="skills">
+        <div>
             <h3> Algumas de minhas hard skills:</h3>
             <ul class="hard">
                 <li>Algorítimos e lógica de programação</li>
@@ -49,6 +51,7 @@
                 <li>Responsabilidade</li>
             </ul>
         </div>
+    </section>
         <div id="hobbies">
             <h3>Hobbies:</h3>
             <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que
