adição e estilização dos logos de tecnologias

--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
             </p>
     </section>
     <section id="skills">
-        <div>
-            <h3> Algumas de minhas hard skills:</h3>
+            <h3> Tecnologias já trabalhadas</h3>
             <ul class="hard">
-                <li>Algorítimos e lógica de programação</li>
-                <li>Git e GitHub</li>
-                <li><strong>HTML</strong></li>
-                <li>CSS</li>
+                <li>GIT<img src="./Git-Logo-2Color.png" alt="Logo_git" width="200px" id="git_logo"></li>
+                <li>HTML 5<img src="./html5-logo-html-logo-0.png" alt="Logo_html" width="200px" id="html_logo"></li>
+                <li>CSS<img src="./logo-css-3-256.png" alt="css_logo" width="220px" id="css_logo"></li>
+                <li>JavaScrip<img src="javascript-online-logo-for-website-0.png" alt="javascript_logo" width="170px" id="js_logo"></li>
             </ul>
             <h3 id="softskills"> Algumas de minhas soft skills:</h3>
             <ul class="soft">
@@ -50,7 +49,6 @@
                 <li><em>Resiliência</em></li>
                 <li>Responsabilidade</li>
             </ul>
-        </div>
     </section>
         <div id="hobbies">
             <h3>Hobbies:</h3>
