estilização div softskills

--- a/index.html
+++ b/index.html
@@ -23,44 +23,54 @@
         </nav>
     </header>
     <section id="presentation">
-            <img id="foto-igor" src="IMG_20220925_180308-removebg-preview.png" alt="Igor com camisa cinza em pé">
-            <p>
-                <span>Olá! Boas vindas!</span><br><br><br>
-                Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em Belo Horizonte, MG. Sou graduado como
-                médico veterinário desde dezembro de 2021, mas estou em transição de carreira, estudando desenvolvimento web fullstack na
-                <strong>Trybe</strong>.<br><br><br>
-                Como não tive contato com a área de programação durante minha trajetória de vida, não me havia passado pela cabeça adentrar nesse mundo nos últimos anos, até que em março de 2022, decidi buscar um pouco mais sobre a área apartir de um relato de um amigo. Desde então, estou apaixonado por programação.<br><br><br>
-                Meu foco atual é o desenvolvimento web voltado para front-end. Diante disso, criei esse portifólio para mostrar um pouco sobre mim e os projetos que já desenvolvi. 
-            </p>
+        <img id="foto-igor" src="IMG_20220925_180308-removebg-preview.png" alt="Igor com camisa cinza em pé">
+        <p>
+            <span>Olá! Boas vindas!</span><br><br><br>
+            Me chamo Igor Barbosa de Araújo, tenho 29 anos, moro em Belo Horizonte, MG. Sou graduado como
+            médico veterinário desde dezembro de 2021, mas estou em transição de carreira, estudando desenvolvimento web
+            fullstack na
+            <strong>Trybe</strong>.<br><br><br>
+            Como não tive contato com a área de programação durante minha trajetória de vida, não me havia passado pela
+            cabeça adentrar nesse mundo nos últimos anos, até que em março de 2022, decidi buscar um pouco mais sobre a
+            área apartir de um relato de um amigo. Desde então, estou apaixonado por programação.<br><br><br>
+            Meu foco atual é o desenvolvimento web voltado para front-end. Diante disso, criei esse portifólio para
+            mostrar um pouco sobre mim e os projetos que já desenvolvi.
+        </p>
     </section>
-    <section id="skills">
+    <section id=skills>
+        <div class="tecnologias">
             <h3> Tecnologias já trabalhadas</h3>
             <ul class="hard">
                 <li>GIT<img src="./Git-Logo-2Color.png" alt="Logo_git" width="200px" id="git_logo"></li>
                 <li>HTML 5<img src="./html5-logo-html-logo-0.png" alt="Logo_html" width="200px" id="html_logo"></li>
                 <li>CSS<img src="./logo-css-3-256.png" alt="css_logo" width="220px" id="css_logo"></li>
-                <li>JavaScrip<img src="javascript-online-logo-for-website-0.png" alt="javascript_logo" width="170px" id="js_logo"></li>
+                <li>JavaScrip<img src="javascript-online-logo-for-website-0.png" alt="javascript_logo" width="170px"
+                        id="js_logo"></li>
             </ul>
-            <h3 id="softskills"> Algumas de minhas soft skills:</h3>
-            <ul class="soft">
+        </div>
+        <div class="softskills">
+            <h3>Soft skills que me definem</h3>
+            <ul class="list_soft">
                 <li>Determinação</li>
                 <li>Proatividade</li>
                 <li>Instindo de liderança</li>
-                <li><em>Resiliência</em></li>
+                <li>Resiliência</li>
                 <li>Responsabilidade</li>
             </ul>
+        </div>
     </section>
-        <div id="hobbies">
-            <h3>Hobbies:</h3>
-            <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que
-                gosto.
-                Segue uma playlist que recomendo: <a
-                    href="https://www.youtube.com/watch?v=4N1iwQxiHrs&list=PLk_k5502gpfP9gCYR8iU4KpKP7-JUm3LC"
-                    target="_blank">Playlist</a></p>
-        </div>
-        <div id="fim">
-            <p>Caso queira vizualizar minha foto maior, clique <a href="#foto-igor" target="_blank">aqui</a>.</p>
-        </div>
+    <div id="hobbies">
+        <h3>Hobbies:</h3>
+        <p>No meu tempo livre, uma das coisas que mais gosto de fazer é acessar o youtube para ouvir músicas que
+            gosto.
+            Segue uma playlist que recomendo: <a
+                href="https://www.youtube.com/watch?v=4N1iwQxiHrs&list=PLk_k5502gpfP9gCYR8iU4KpKP7-JUm3LC"
+                target="_blank">Playlist</a></p>
+    </div>
+    <div id="fim">
+        <p>Caso queira vizualizar minha foto maior, clique <a href="#foto-igor" target="_blank">aqui</a>.</p>
+    </div>
     </div>
 </body>
+
 </html>
